--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
+streamlit==1.35.0
 matplotlib
-numpy
-pandas
-joblib
-shap
-streamlit_shap
+numpy==1.26.4 
+pandas==2.2.2
+joblib==1.4.2
+shap==0.42.1
+streamlit_shap==1.0.2
 pillow
